--- a/src/app/task/task.component.css
+++ b/src/app/task/task.component.css
@@ -10,3 +10,8 @@
   .example-header {
     background-size: cover;
   }
+  .btn-fab-bottom-right{
+    position: fixed !important;
+    right: 15px;
+    bottom: 15px;
+}
