--- a/src/app/task-list/task-list.component.css
+++ b/src/app/task-list/task-list.component.css
@@ -7,3 +7,8 @@
     background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
     background-size: cover;
   }
+  .btn-fab-bottom-right{
+    position: fixed !important;
+    right: 15px;
+    bottom: 15px;
+}
