--- a/src/app/task/task.component.html
+++ b/src/app/task/task.component.html
@@ -12,6 +12,7 @@
     <p>
       {{ task.description }}
     </p>
+    <p>Requester: {{ task.requester }}</p>
     <p>Creation Date: {{ task.creation_date }}</p>
     <p>Last Update Date: {{ task.last_update_date }}</p>
   </mat-card-content>
@@ -46,7 +47,7 @@
     <mat-header-cell *matHeaderCellDef> Status </mat-header-cell>
     <mat-cell *matCellDef="let subtask">
       <mat-icon>{{
-        subtask.status == "done" ? "done" : "clear"
+        subtask.status == "Done" ? "done" : "clear"
       }}</mat-icon></mat-cell
     >
   </ng-container>
@@ -54,3 +55,13 @@
   <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
   <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
 </mat-table>
+
+<button
+  mat-fab
+  color="warn"
+  class="btn-fab-bottom-right"
+  aria-label="Add Task"
+  (click)="openDialog()"
+>
+  <mat-icon>add</mat-icon>
+</button>
