--- a/src/app/task-list/task-list.component.html
+++ b/src/app/task-list/task-list.component.html
@@ -1,4 +1,4 @@
-<mat-card class="example-card" *ngFor="let task of mTasks">
+<mat-card class="center" *ngFor="let task of mTasks">
   <mat-card-header>
     <div mat-card-avatar>
       <span class="material-icons">
@@ -14,10 +14,10 @@
     </p>
     <p>Requester: {{ task.requester }}</p>
     <p>Creation Date: {{ task.creation_date }}</p>
-    <p>Last Update Date: {{ task.last_update_date }}</p>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-button (click)="btnClick(task.task_id)">Details</button>
+    <button mat-raised-button (click)="btnClick(task.task_id)">Details</button>
+    <button mat-raised-button color="warn" (click)="deleteTask(task.task_id)">Delete</button>
   </mat-card-actions>
 </mat-card>
 
