--- a/src/app/task/task.component.html
+++ b/src/app/task/task.component.html
@@ -31,7 +31,7 @@
 >
   
   <ng-container matColumnDef="ID">
-    <mat-header-cell *matHeaderCellDef> ID </mat-header-cell>
+    <mat-header-cell *matHeaderCellDef> Subtask ID </mat-header-cell>
     <mat-cell *matCellDef="let subtask"> {{ subtask.subtask_id }} </mat-cell>
   </ng-container>
 
