--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<mat-toolbar color="primary">
+<mat-toolbar color="primary" class="mat-elevation-z4">
   <mat-toolbar-row>
-    <span>Task App</span>
+    <span><a mat-button routerLink="/"><mat-icon>trending_up</mat-icon>  Task App</a></span>
     <span class="example-spacer"></span>
   </mat-toolbar-row>
 </mat-toolbar>
