--- a/src/app/task-list/task-list.component.html
+++ b/src/app/task-list/task-list.component.html
@@ -1,3 +1,62 @@
+<mat-form-field>
+  <mat-label>Filter Tasks</mat-label>
+  <input matInput (keyup)="applyFilter($event)" placeholder="Ex. build">
+</mat-form-field>
+
+<mat-table
+  [dataSource]="dataSource"
+  class="mat-elevation-z8"
+  *ngIf="mTasks.length != 0"
+>
+  <ng-container matColumnDef="ID">
+    <mat-header-cell *matHeaderCellDef> Task ID </mat-header-cell>
+    <mat-cell *matCellDef="let task"> {{ task.task_id }} </mat-cell>
+  </ng-container>
+
+  <ng-container matColumnDef="Description">
+    <mat-header-cell *matHeaderCellDef> Description </mat-header-cell>
+    <mat-cell *matCellDef="let task"> {{ task.description }} </mat-cell>
+  </ng-container>
+
+  <ng-container matColumnDef="Requester">
+    <mat-header-cell *matHeaderCellDef> Requester </mat-header-cell>
+    <mat-cell *matCellDef="let task"> {{ task.requester }} </mat-cell>
+  </ng-container>
+
+  <ng-container matColumnDef="Status">
+    <mat-header-cell *matHeaderCellDef> Status </mat-header-cell>
+    <mat-cell *matCellDef="let task">
+      <mat-icon>{{
+        task.status == "Done" ? "done" : "clear"
+      }}</mat-icon></mat-cell
+    >
+  </ng-container>
+
+  <ng-container matColumnDef="Creation Date">
+    <mat-header-cell *matHeaderCellDef> Creation Date </mat-header-cell>
+    <mat-cell *matCellDef="let task"> {{ task.creation_date }} </mat-cell>
+  </ng-container>
+
+  <ng-container matColumnDef="Actions">
+    <mat-header-cell *matHeaderCellDef> Actions </mat-header-cell>
+    <mat-cell *matCellDef="let task">
+      <button mat-raised-button (click)="taskDetails(task.task_id)">
+        Details
+      </button>
+      <button mat-raised-button color="warn" (click)="deleteTask(task.task_id)">
+        Delete
+      </button></mat-cell
+    >
+  </ng-container>
+
+  <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+  <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
+</mat-table>
+<mat-paginator
+  [pageSizeOptions]="[5, 10, 20]"
+  showFirstLastButtons
+></mat-paginator>
+  <!-- old layout 
 <mat-card class="center" *ngFor="let task of mTasks">
   <mat-card-header>
     <div mat-card-avatar>
@@ -16,11 +75,15 @@
     <p>Creation Date: {{ task.creation_date }}</p>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-raised-button (click)="btnClick(task.task_id)">Details</button>
-    <button mat-raised-button color="warn" (click)="deleteTask(task.task_id)">Delete</button>
+    <button mat-raised-button (click)="taskDetails(task.task_id)">
+      Details
+    </button>
+    <button mat-raised-button color="warn" (click)="deleteTask(task.task_id)">
+      Delete
+    </button>
   </mat-card-actions>
 </mat-card>
-
+-->
 <button
   mat-fab
   color="warn"
